refact(Task-36): refactoring of the code and tests